# DelphiPka

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_for_Compile.txt  README_for_Run.txt  run.prm  sample.pbs
param/: amber.crg  amber.siz  charmm22.crg  charmm22.siz  gromos.crg  gromos.siz  parseres.crg  parseres.siz  topology
param2/: charmm22.crg  gromos.crg  parseres.crg  topology
src/delphi/app/: app_primepka.cpp
src/delphi/delphi/: delphi_constants.h  delphi_data.h  delphi_data_flash.cpp  delphi_data_reset.cpp  delphi_data_setMap.cpp  delphi_data_showMap.cpp  delphi_datamarshal.h  delphi_datamarshal_getFunction.cpp  delphi_datamarshal_getStatement.cpp  delphi_datamarshal_setDefault.cpp  delphi_datamarshal_showParameters.cpp  delphi_datamarshal_updateParameters.cpp  delphi_exceptions.h
src/delphi/energy/: energy.h  energy_clb.cpp  energy_clbmedia.cpp  energy_clbnonl.cpp  energy_clbtotal.cpp  energy_exceptions.h  energy_nl.cpp  energy_react.cpp  energy_run.cpp
src/delphi/interface/: environment.h  exceptions.cpp  exceptions.h  interface_abstractmodule.h  interface_datacontainer.cpp  interface_datacontainer.h  interface_datacontainer_impls.cpp  interface_datamarshal.cpp  interface_datamarshal.h  interface_exceptions.h
src/delphi/io/: io.h  io_datatype.h  io_epsmap.cpp  io_epsmap.cpp.BAK  io_exceptions.h  io_force.cpp  io_frc.cpp  io_misc.cpp  io_pdb.cpp
src/delphi/misc/: misc_grid.h  misc_grid_impls.cpp  misc_grid_opts.cpp  misc_interpl.cpp  misc_interpl.h  misc_timer.cpp  misc_timer.h
src/delphi/site/: site.h  site_exceptions.h  site_expand.cpp  site_phicon.cpp  site_rforce.cpp  site_rforceesp1.cpp  site_tops.cpp  site_writePAnalysis.cpp  site_writePhi.cpp  site_writePhiMap.cpp  site_writePotential_ccp4.cpp  site_writePotential_cube.cpp  site_writePotential_delphi.cpp  site_writePotential_fromPrevious.cpp  site_writePotential_grasp.cpp  site_writePotential_insight.cpp  site_writePotential_zphi.cpp  site_writeSite.cpp
src/delphi/solver/: solver_bndy_isCoulombBndy.cpp  solver_bndy_isDipolarBndy.cpp  solver_bndy_isFocusBndy.cpp  solver_bndy_setBndy.cpp  solver_exceptions.h  solver_fastSOR.h  solver_fastSOR_initOddEvenItr.cpp  solver_fastSOR_itit.cpp  solver_fastSOR_itrEvenPoints-mod.cpp  solver_fastSOR_itrEvenPoints.cpp  solver_fastSOR_itrOddPoints-mod.cpp  solver_fastSOR_itrOddPoints.cpp  solver_fastSOR_mkdbsf.cpp  solver_fastSOR_nitit.cpp  solver_fastSOR_postItr.cpp  solver_fastSOR_relfac.cpp  solver_fastSOR_run.cpp  solver_fastSOR_setcrg.cpp  solver_fastSOR_validateInput.cpp
src/delphi/space/: grid_space.cpp  space.h  space_crgarr.cpp  space_cube.cpp  space_eps.cpp  space_exceptions.h  space_fft.cpp  space_indver.cpp  space_msrf.cpp  space_run.cpp  space_sas.cpp  space_sclbp.cpp  space_setconvolute.cpp  space_setgaussian.cpp  space_setout.cpp  space_templates.h  space_validateInput.cpp  space_vwtms.cpp  space_vwtms_inc.cpp
src/delphiPKa/: clustering.cpp  clustering.h  data_store.h  energy.cpp  energy.h  energy_misc.cpp  energy_readlog.cpp  energymap.cpp  global_type.cpp  global_type.h  main.cpp  network.cpp  network.h  orbt_type.cpp  orbt_type.h  pdb_import.cpp  pdb_import.h  place_hydrogen.cpp  place_hydrogen.h  prime_environment.h  readparam.cpp  readparam.h  titration.cpp  titration.h  titration2.cpp  titration2.h  titration_misc.cpp  topology_import.cpp  topology_import.h
